--- a/launcher/templates/base.html
+++ b/launcher/templates/base.html
@@ -5,8 +5,8 @@
     <title>Appsembler Launcher</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet" media="screen">
-    <link href="{% static "css/bootstrap-responsive.min.css" %}" rel="stylesheet" media="screen">
+    <link href="{% static "bootstrap/docs/assets/css/bootstrap.css" %}" rel="stylesheet" media="screen">
+    <link href="{% static "bootstrap/docs/assets/css/bootstrap-responsive.css" %}" rel="stylesheet" media="screen">
     <link href="{% static "css/app.css" %}" rel="stylesheet" media="screen">
     {% block extra_css %}{% endblock extra_css %}
   </head>
@@ -15,11 +15,11 @@
       {% block content %}{% endblock %}
     </div> <!-- /container -->
 
-    <script src="http://code.jquery.com/jquery.min.js"></script>
-    <script src="{% static "js/bootstrap.min.js" %}"></script>
-    <script src="{% static "js/json2.js" %}"></script>
-    <script src="{% static "js/underscore-min.js" %}"></script>
-    <script src="{% static "js/backbone-min.js" %}"></script>
+    <script src="{% static "jquery/jquery.min.js" %}"></script>
+    <script src="{% static "bootstrap/docs/assets/js/bootstrap.min.js" %}"></script>
+    <script src="{% static "json2/json2.js" %}"></script>
+    <script src="{% static "underscore/underscore.js" %}"></script>
+    <script src="{% static "backbone/backbone.js" %}"></script>
     {% block extra_js %}
     {% endblock extra_js %}
     {% block js_templates %}
