updated more templates to use bower packages

--- a/launcher/templates/deployment/deployer_detail.html
+++ b/launcher/templates/deployment/deployer_detail.html
@@ -2,13 +2,13 @@
 {% load static from staticfiles %}
 
 {% block extra_css %}
-<link href="{% static "css/bootstrap-modal.css" %}" rel="stylesheet" media="screen">
+<link href="{% static "bootstrap-modal/css/bootstrap-modal.css" %}" rel="stylesheet" media="screen">
 {% endblock extra_css %}
 
 {% block extra_js %}
   {{ block.super}}
-  <script src="{% static "js/bootstrap-modalmanager.js" %}"></script>
-  <script src="{% static "js/bootstrap-modal.js" %}"></script>
+  <script src="{% static "bootstrap-modal/js/bootstrap-modalmanager.js" %}"></script>
+  <script src="{% static "bootstrap-modal/js/bootstrap-modal.js" %}"></script>
 {% endblock extra_js %}
 
 
