--- a/launcher/templates/deployment/deployment_detail.html
+++ b/launcher/templates/deployment/deployment_detail.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
+{% load compressed %}
 {% load static from staticfiles %}
 
 {% block extra_js %}
-<script src="{% static "kbwood_countdownjs/jquery.countdown.min.js" %}"></script>
+{% compressed_js 'countdown' %}
 <script>
   $("#minutes").countdown({until: '+{{remaining}}s', onTick: updateProgressbar, tickInterval: 10,
    layout: '{mn} {ml} and {sn} {sl}'});
