--- a/launcher/templates/deployment/deployer_base.html
+++ b/launcher/templates/deployment/deployer_base.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
+{% load compressed %}
 {% load static from staticfiles %}
 
 {% block extra_js %}
     <script src="http://js.pusher.com/2.1/pusher.min.js"></script>
-    <script src="{% static "js/app.js" %}"></script>
+    {% compressed_js 'app' %}
     <script>
       apps = {{ apps|safe }};
     </script>
