WIP on bootstrap 3 migration, most of it works good

--- a/launcher/static/css/app.css
+++ b/launcher/static/css/app.css
@@ -37,10 +37,10 @@ body {
 }
 
 .app-url {
-  font-size: 12px;
+  font-size: 13px;
 }
 
-.remaining-progress .bar {
+.remaining-progress .progress-bar {
   background-color: #EE7A70;
 }
 
