--- a/launcher/templates/deployment/deployer_base.html
+++ b/launcher/templates/deployment/deployer_base.html
@@ -14,25 +14,23 @@
 {% block js_templates %}
     <!-- Templates -->
     <script type="text/template" id="project_form_template">
+      {% block extra_deployer_content %}{% endblock extra_deployer_content %}
       <div id="central-widget">
       <form class="form-deploy" method="post">
         {% block deployer_form %}
         {% endblock deployer_form %}
         <h4>Where can we send the URL?</h4>
-        <div class="control-group">
-          <div class="controls">
-            <div class="input-prepend">
-              <span class="add-on"><i class="icon-envelope"></i></span>
-              <input type="text" name="email" value="" id="email_input" placeholder="name@domain.com">  
+        <div class="form-group">
+            <div class="input-group">
+              <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
+              <input type="text" name="email" class="form-control" value="" id="email_input" placeholder="name@domain.com">
             </div>
-            <span class="help-inline"></span>
-          </div>
+            <span class="help-block"></span>
         </div>
         <button class="btn btn-success" type="submit">Launch demo site</button>
       </form>
       {% block form_extra_text %}{% endblock form_extra_text %}
       </div> 
-      {% block extra_deployer_content %}{% endblock extra_deployer_content %}
     </script>
 
     <script type="text/template" id="deploy_status_template">
@@ -41,10 +39,12 @@
         <img src="{% static "img/ajax-loader.gif" %}" alt="loader" class="spinner">
         <h3>Deploying <%= app_name %></h3>
         <div class="progress progress-striped active">
-          <div class="bar" style="width: 5%;"></div>
+          <div class="progress-bar" role="progressbar" style="width: 5%;" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">
+              <span class="sr-only">5% Complete</span>
+          </div>
         </div>
         <div class="alert alert-info" id="info-message-section">
-          <i class="icon-wrench"></i><span id="info-message">Starting deployment...</span>
+          <span class="glyphicon glyphicon-wrench"></span><span id="info-message"> Starting deployment...</span>
         </div>
         <p class="survey">
         <% if (survey_url !== '') { %>
