make the heading bold

--- a/launcher/static/css/app.css
+++ b/launcher/static/css/app.css
@@ -21,6 +21,7 @@ body {
 .form-deploy .form-deploy-heading {
   margin-bottom: 10px;
   text-align: center;
+  font-weight: bold;
 }
 
 .form-deploy #project_select {
