added appsembler logo

--- a/launcher/templates/deployment/deployer_base.html
+++ b/launcher/templates/deployment/deployer_base.html
@@ -17,6 +17,7 @@
       {% block extra_deployer_content %}{% endblock extra_deployer_content %}
       <div id="central-widget">
           <form class="form-deploy" method="post">
+            <a href="http://www.appsembler.com" id="appsembler-logo"><img src="{% static "img/appsembler_logo.png" %}" alt="Appsembler logo" /></a>
             {% block deployer_form %}
             {% endblock deployer_form %}
             <h4>Where can we send the URL?</h4>
