hide embed buttons text when widget is embedded in an iframe

--- a/launcher/templates/deployment/deployer_detail.html
+++ b/launcher/templates/deployment/deployer_detail.html
@@ -9,7 +9,7 @@
 {% endblock deployer_form %}
 
 {% block form_extra_text %}
-<p><small><a data-toggle="modal" href="#" data-target="#embed-buttons">Embed</a> the button on your website!</small></p>
+<p class="embed-buttons-message"><small><a data-toggle="modal" href="#" data-target="#embed-buttons">Embed</a> the button on your website!</small></p>
 {% endblock form_extra_text %}
 
 {% block extra_deployer_content %}
