--- a/launcher/templates/base.html
+++ b/launcher/templates/base.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap -->
     <script src="http://fb.me/react-0.12.1.js"></script>
     <script src="http://fb.me/JSXTransformer-0.12.1.js"></script>
-    <script type="text/jsx" src="{% static 'js/app.react.js' %}"></script>
+    <script type="text/jsx;harmony=true" src="{% static 'js/app.react.js' %}"></script>
     <script>
       window.STATIC_URL = {{ STATIC_URL }};
     </script>
