--- a/launcher/templates/base.html
+++ b/launcher/templates/base.html
@@ -6,6 +6,8 @@
     <title>Appsembler Launcher</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/superagent/0.15.7/superagent.js"></script>
     <script src="http://fb.me/react-0.12.2.js"></script>
     <script src="http://fb.me/JSXTransformer-0.12.2.js"></script>
     <script type="text/jsx;harmony=true" src="{% static 'js/app.react.js' %}"></script>
